# batteri

./: .bzrignore  CMakeLists.txt  README-en  README-ru.md  README.md  batteri.desktop
.bzr/branch/: branch.conf  last-revision
.bzr/checkout/: dirstate
.bzr/repository/: pack-names
debian/: changelog  changelog~  control  control~  copyright  install
src/: Makefile  batteri.c  batteri01.c
